@@ -2233,5 +2233,7 @@ version 10.12 (2023-07-31)
     * The AccessTokenResponse receives authorization_details (RAR) support.
     * The TokenIntrospectionSuccessResponse receives authorization_details
       (RAR) support.
+    * AuthorizationServerMetadata and OIDCProviderMetadata receive
+      authorization_details_types_supported (RAR) support.
     * Adds OAuth2Error.INVALID_AUTHORIZATION_DETAILS constant for RAR.
     * Identifier.toStringList(Collection) must omit null items (iss #430).
